sbatch_outputs/err_train_size50.37310899.err
  File "train_grainsize.py", line 123
    print(f"\nThe model has {count_params(model)} trainable parameters\n")
                                                                        ^
SyntaxError: invalid syntax
